--- a/frontend/src/lib/assets/app.css
+++ b/frontend/src/lib/assets/app.css
@@ -28,7 +28,7 @@
 
 	@font-face {
 		font-family: 'Inter';
-		src: url('/Inter-Variable.ttf');
+		src: url('/Inter-Variable.woff2') format('woff2');
 		font-weight: 100 900;
 		font-display: swap;
 	}
